changed tag names

--- a/public/index.html
+++ b/public/index.html
@@ -64,24 +64,26 @@
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
-        <section class='tweets'>
-          <header class='tweets-header'>
-            <div>
-              <i class="fa-regular fa-face-grin-stars"></i>              
-              <span>Minha Kim</span>
-            </div>
-            <span class='tweets-nickname'>@minhakk24</span>
-          </header>
-          <p class='tweets-message'>It's my first tweet message 🌸</p>
-          <footer class='tweets-footer'>
-            <span>10 days ago</span>
-            <div class='tweets-icons'>
-              <i class="fa-solid fa-flag"></i>
-              <i class="fa-sharp fa-solid fa-retweet"></i>          
-              <i class="fa-solid fa-heart"></i>
-            </div>
-            
-          </footer>
+        <section id='tweets-container'>
+          <article class='tweets'>
+            <header class='tweets-header'>
+              <div>
+                <i class="fa-regular fa-face-grin-stars"></i>              
+                <span>Minha Kim</span>
+              </div>
+              <span class='tweets-nickname'>@minhakk24</span>
+            </header>
+            <p class='tweets-message'>It's my first tweet message 🌸</p>
+            <footer class='tweets-footer'>
+              <span>10 days ago</span>
+              <div class='tweets-icons'>
+                <i class="fa-solid fa-flag"></i>
+                <i class="fa-sharp fa-solid fa-retweet"></i>          
+                <i class="fa-solid fa-heart"></i>
+              </div>
+            </footer>
+          </article>
+
         </section>
       </section>
     </main>
