--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
           </div>
         </form>
         <section id='tweets-container'>
-          <article class='tweets'>
+          <!-- <article class='tweets'>
             <header class='tweets-header'>
               <div>
                 <i class="fa-regular fa-face-grin-stars"></i>              
@@ -84,7 +84,7 @@
                 <i class="fa-solid fa-heart"></i>
               </div>
             </footer>
-          </article>
+          </article> -->
 
         </section>
       </section>
