added animation fa-bounce

--- a/public/index.html
+++ b/public/index.html
@@ -37,10 +37,10 @@
       </div>
       <div class='nav-rightbox'>
         <span><b>Write</b> a new tweet</span>
-        <i class="fa-solid fa-angles-down"></i>
+        <i class="fa-solid fa-angles-down fa-bounce"></i>
       </div>
     </nav>
-
+    
     <header class='header'>
       <div>
           <img src="/images/profile-hex.png"> 
@@ -50,7 +50,7 @@
           <span class='header-name-first'>Minha</span>
           <span>Kim</span>
       </div>
-  </header>
+    </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
