updated textarea and label

--- a/public/index.html
+++ b/public/index.html
@@ -59,8 +59,8 @@
         <!-- <h2>Compose Tweet</h2> -->
         <form method='POST' action='/tweets'>
           <div class='new-tweet-comments'>
-            <label class="new-tweet-comment" for="tweet-text">What are you humming about?</label>
-            <textarea name="text" id="tweet-text" rows='1' cols='70'></textarea>
+            <label class="new-tweet-comment" for="tweet-text"></label>
+            <textarea name="text" id="tweet-text" rows='1' cols='70' placeholder='What are you humming about?'></textarea>
           </div>
           <div class='new-tweet-bottom'>
             <button class="new-tweet-button" type="submit">Tweet</button>
