added id on toggle button

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       </div>
       <div class='nav-rightbox'>
         <span><b>Write</b> a new tweet</span>
-        <i class="fa-solid fa-angles-down fa-bounce"></i>
+        <i id="focus_scroll" class="fa-solid fa-angles-down fa-bounce"></i>
       </div>
     </nav>
 
